aws-alb-ingress-controller/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-test
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
